[package]
name = "HTMLtoRSS"
version = "0.1.0"
edition = "2021"
authors = ["bobosola@gmail.com"]
description = "Convert HTML content to RSS feed item"
license = "MIT"
repository = "https://github.com/bobosola/HTMLtoRSS"
keywords = ["rss", "html", "feed", "xml", "converter"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
scraper = "0.18"
url = "2.3"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
chrono = "0.4.42"
